Next release

Beta 9

Renamed Practice back to Meditation.
Fixed bug where high score would not be indicated on game over screen.
New fonts and colors.
New menu layouts.
Modified log message popup animation.


Beta 8

Renamed Meditation to Practice.
Added Game Center high score support.
Added shading to artwork and adjusted colors to match icon.
New background music and sound effects.
Moved LHC map.
Log messages now display on top of puzzle.
Moved next piece indicator.
Fixed typo in Accelerator.


Beta 7

Time Attack and Accelerator swapped on main menu screen.
Border of particle sprite is now light instead of dark.
Explosions are larger with fewer particles.
Outer detector now blinks instead of scaling.
Adjusted detector blink and graph angle to prevent overlap.
Adjusted detector graph scaling to remove transparency.
Drawing of explosion particle systems is now a single OpenGL call.
Time Attack now adds 25 seconds per level instead of 30.
Maximum time between pieces in Acellerator mode adjusted down to 2.9 seconds
Minimum time between pieces in Acellerator mode adjusted down to 0.9 seconds.
Fixed bug where sound effects would stop after selecing New Game from the Game 
    Over screen.
New App Icon
Level indicator removed from Meditation mode.
Level indecator no-longer animates when changing levels.
App display name changed from CharmQuark to Charm Quark. 